Change delete-category-by-name semantics.
